--- a/fapes202484jgd/2_transforma_csv_parquet.ipynb
+++ b/fapes202484jgd/2_transforma_csv_parquet.ipynb
@@ -9,21 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted C:/Users/RafaelStein/Downloads/file_1.csv to C:/Users/RafaelStein/Downloads/file_1.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_2.csv to C:/Users/RafaelStein/Downloads/file_2.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_3.csv to C:/Users/RafaelStein/Downloads/file_3.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_4.csv to C:/Users/RafaelStein/Downloads/file_4.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_5.csv to C:/Users/RafaelStein/Downloads/file_5.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_6.csv to C:/Users/RafaelStein/Downloads/file_6.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_7.csv to C:/Users/RafaelStein/Downloads/file_7.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_8.csv to C:/Users/RafaelStein/Downloads/file_8.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_9.csv to C:/Users/RafaelStein/Downloads/file_9.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_10.csv to C:/Users/RafaelStein/Downloads/file_10.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_11.csv to C:/Users/RafaelStein/Downloads/file_11.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_12.csv to C:/Users/RafaelStein/Downloads/file_12.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_13.csv to C:/Users/RafaelStein/Downloads/file_13.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_14.csv to C:/Users/RafaelStein/Downloads/file_14.parquet\n",
-      "Converted C:/Users/RafaelStein/Downloads/file_15.csv to C:/Users/RafaelStein/Downloads/file_15.parquet\n"
+      "Inserir aqui o caminho da pasta"
      ]
     }
    ],
